--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@
     flutter:
       sdk: flutter
     cupertino_icons: ^1.0.6
+    flutter_localizations:
+        sdk: flutter
+    intl: any
+    provider: ^6.1.2
 
   dev_dependencies:
     flutter_native_splash: ^2.4.0
@@ -18,6 +22,8 @@
   flutter_native_splash:
     background_image: assets/images/splash_screen.png  # Path to the splash screen image
     background_image_dark: assets/images/splash_image_night.png
+    image: assets/images/splash_screen.png  # Path to the splash screen image
+    image_dark: assets/images/splash_image_night.png
     android: true  # Enable splash screen for Android
     ios: true  # Enable splash screen for iOS
     web: false  # Enable splash screen for Web (if needed)
@@ -33,7 +39,7 @@
   # included with your application, so that you can use the icons in
   # the material Icons class.
     uses-material-design: true
-
+    generate: true
   # To add assets to your application, add an assets section, like this:
     assets:
       - assets/
