--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@
   dependencies:
     flutter:
       sdk: flutter
+    shared_preferences:
     cupertino_icons: ^1.0.6
     flutter_localizations:
         sdk: flutter
